--- a/roles/ocp4-install-vsphere/templates/install-config.yaml.j2
+++ b/roles/ocp4-install-vsphere/templates/install-config.yaml.j2
@@ -57,4 +57,4 @@ platform:
 publish: External
 pullSecret: '{{ ocp4_pull_secret |  replace("'",'"') }}'
 sshKey: |
-  {{ sshKeyPub }}
+  {{ idrsapub.content | b64decode }}
