install-config 4.10 template

--- a/roles/ocp4-install-vsphere/templates/install-config-yml-4-10.j2
+++ b/roles/ocp4-install-vsphere/templates/install-config-yml-4-10.j2
@@ -38,13 +38,11 @@ networking:
   - {{ service_Network }}
 platform:
   vsphere:
-    apiVIP:
-    - {{ apiVip }}
+    apiVIP: {{ apiVip }}
     cluster: {{ vsphereCluster }}
     datacenter: {{ vsphereDatacenter }}
     defaultDatastore: {{ vsphereDatastore }}
-    ingressVIP:
-    - {{ ingressVip }}
+    ingressVIP: {{ ingressVip }}
     network: {{ vsphereNetwork }}
     password: {{ vspherePassword }}
     username: {{ vsphereUsername }}
