teste chrony template

--- a/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
+++ b/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
@@ -14,7 +14,7 @@ storage:
 {%- for server in ntp_server %}
         
         server {{ server }} iburst
-{% endfor -%}
+{%- endfor %}
         driftfile /var/lib/chrony/drift
         makestep 1.0 3
         rtcsync
