test chrony template

--- a/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
+++ b/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
@@ -11,10 +11,10 @@ storage:
     overwrite: true
     contents:
       inline: | 
-{%- for server in ntp_server %}
+{%- for server in ntp_server -%}
         
         server {{ server }} iburst
-{%- endfor -%}
+{% endfor %}
         driftfile /var/lib/chrony/drift
         makestep 1.0 3
         rtcsync
