test chrony template

--- a/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
+++ b/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
@@ -11,8 +11,7 @@ storage:
     overwrite: true
     contents:
       inline: | 
-{%- for server in ntp_server -%}
-        
+{%- for server in ntp_server %}        
         server {{ server }} iburst
 {% endfor %}
         driftfile /var/lib/chrony/drift
