--- a/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
+++ b/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
@@ -12,7 +12,7 @@ storage:
     contents:
       inline: | 
 {%- for server in ntp_server %}        
-        server {{ server }} iburst
+        server {{ server|e }} iburst
 {% endfor %}
         driftfile /var/lib/chrony/drift
         makestep 1.0 3
