Adjusting jinja template chrony

--- a/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
+++ b/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
@@ -11,9 +11,9 @@ storage:
     overwrite: true
     contents:
       inline: | 
-{%- for server in ntp_server %}        
-        server {{ server|e }} iburst
-{% endfor %}
+{%- for server in ntp_server %}
+        server {{ server }} iburst
+{%- endfor +%}
         driftfile /var/lib/chrony/drift
         makestep 1.0 3
         rtcsync
