--- a/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
+++ b/roles/timezone-chrony-rhcos/templates/machine-config-chrony.j2
@@ -1,19 +1,19 @@
 variant: openshift
 version: 4.10.0
 metadata:
-  name: 99-worker-chrony 
+  name: 99-worker-chrony
   labels:
-    machineconfiguration.openshift.io/role: worker 
+    machineconfiguration.openshift.io/role: worker
 storage:
   files:
   - path: /etc/chrony.conf
-    mode: 0644 
+    mode: 0644
     overwrite: true
     contents:
-      inline: | 
-{%- for server in ntp_server %}
+      inline: |
+{% for server in ntp_server %}
         server {{ server }} iburst
-{%- endfor +%}
+{% endfor %}
         driftfile /var/lib/chrony/drift
         makestep 1.0 3
         rtcsync
